Fixed input inner shadow and applied darker borders for modal header and footer for contrast.

--- a/src/styles/brackets_colors.less
+++ b/src/styles/brackets_colors.less
@@ -74,6 +74,7 @@
 @tc-gray-panel-bevel:              inset 0 1px 0 rgba(255, 255, 255, 0.6);
 @tc-gray-panel-top-bar:            #d4d7d7;
 @tc-gray-panel-top-bar-shadow:     1px solid rgba(0, 0, 0, 0.03);
+@tc-gray-panel-separator:          #b4b7b7;
 @tc-gray-component-border:         #9c9e9e;
 @tc-gray-component-focused-border: #0940fd;
 
@@ -88,7 +89,7 @@
 @tc-call-to-action-text:       #ffffff;
 @tc-input-background:          #ffffff;
 @tc-input-border:              #9c9e9e;
-@tc-input-inner-shadow:        inset 0 -1px 0 rgba(0, 0, 0, 0.12);
+@tc-input-inner-shadow:        inset 0 1px 0 rgba(0, 0, 0, 0.12);
 @tc-input-placeholder-text:    #888;
 @tc-input-glow:                0 0 0 2px #6fb5f1;
 
